# distribution-algebra

./: .gitignore  404.html  README.md  algebra.md~  distribution.md~  index.html  index.md~  justfile  mkdocs.yml  normal.md~  objects.inv  pyproject.toml  sitemap.xml
__main__/: index.html
algebra/: index.html
beta/: index.html
beta4/: index.html
binomial/: index.html
config/: index.html
distribution/: index.html
distribution_algebra/: __init__.py  algebra.py  beta.py  beta4.py  binomial.py  config.py  distribution.py  lognormal.py  normal.py  plotting.py  poisson.py
distribution_algebra/examples/: algebra.py  beta_slider.py
docs/: __main__.md  algebra.md  beta.md  beta4.md  binomial.md  config.md  distribution.md  index.md  lognormal.md  normal.md  plotting.md  poisson.md
lognormal/: index.html
normal/: index.html
plotting/: index.html
poisson/: index.html
search/: search_index.json
tests/: conftest.py  test_algebra.py  test_lognormal.py  test_normal.py
