[project]
name = "distribution_algebra"
version = "0.1.27"
description = "A python package that implements an easy-to-use interface for random variables, statistical distributions, and their algebra."
authors = [{ name = "Vaibhav Karve", email = "vkarve@protonmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "statistics",
    "typed",
    "python3",
    "distribution",
    "random",
    "algebra",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "wheel>=0.38.1",
    "numpy>=1.24.0,<2",
    "matplotlib>=3.10.0	",
    "scipy>=1.9.3,<2",
    "loguru>=0.6.0,<0.7",
    "multipledispatch>=0.6.0,<0.7",
    "attrs>=22.2.0,<23",
    "mypy>=1.3.0",
]

[project.urls]
Homepage = "https://vaibhavkarve.github.io/distribution-algebra/"
Repository = "https://github.com/vaibhavkarve/distribution-algebra"
Documentation = "https://vaibhavkarve.github.io/distribution-algebra/"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "hypothesis>=6.61.0,<7",
    "isort>=5.11.4,<6",
    "nptyping[complete]>=2.4.1,<3",
    "safety>=2.3.5,<3",
    "py2puml>=0.6.0,<0.7",
    "pytest-cov>=4.0.0,<5",
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=9.0.0,<10",
    "mkdocs-git-revision-date-localized-plugin>=1.1.0,<2",
    "mkdocstrings[python]>=0.18",
    "pyright>=1.1.291,<2",
    "ipdb>=0.13.11,<0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-name = [
    "distribution_algebra",
    "tests",
]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = []
disable_error_code = ["valid-type", "abstract", "type-abstract"]
files = ["distribution_algebra", "tests"]
warn_unused_ignores = false
plugins = []
follow_imports = "silent"
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true


[[tool.mypy.overrides]]
module = [
    "numpy",
    "scipy",
    "matplotlib.*",
]
ignore_missing_imports = true


[tool.pyright]
include = [
  "./distribution_algebra/*.py",
  "./tests/*.py"
]
pythonVersion = "3.10"
stubPath = "./typings"
reportMissingTypeStubs = true
reportMissingImports = true
typeCheckingMode = "strict"
venvPath = ".venv"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUntypedClassDecorator = false
executionEnvironments = [
  { root = "." }
]

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]
